src/forms/CheckboxGroup.scss
.seeds-checkbox-group {
  --inner-button-gap: var(--seeds-s3);
  display: flex;
  gap: var(--inner-button-gap);
}

.seeds-checkbox-hide {
  opacity: 0;
  position: absolute;
}

.seeds-checkbox-hide:focus-visible + .seeds-button {
  outline: var(--seeds-focus-ring-outline);
  box-shadow: var(--seeds-focus-ring-box-shadow);
}

